@@ -500,10 +500,13 @@ server.brokenToFront=false
 search.dontSyncFilter=false
 #}}}
 
+#{{{ Miscellaneous settings
 # restore remote VFS files by default (new option)
 options.general.restore.remote=true
 optional.title-template={0} {1}
 mime2mode.text/html=html
+debug.beepOnOutput=false
+#}}}
 
 #{{{ Keymaps
 # the current keymap name
